--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog.form
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.EstablishOutboundSecureConversationPropertiesDialog">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="540" height="330"/>
+      <xy x="20" y="20" width="586" height="456"/>
     </constraints>
-    <properties>
-      <minimumSize width="540" height="280"/>
-      <preferredSize width="540" height="280"/>
-    </properties>
+    <properties/>
     <border type="none"/>
     <children>
       <grid id="f773d" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -19,7 +16,7 @@
         <properties/>
         <border type="etched"/>
         <children>
-          <grid id="398bd" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="398bd" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -32,7 +29,8 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Client Entropy:"/>
+                  <labelFor value="4431f"/>
+                  <text resource-bundle="com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog" key="label.client-entropy"/>
                 </properties>
               </component>
               <component id="4431f" class="javax.swing.JTextField" binding="clientEntropyTextField">
@@ -48,7 +46,7 @@
               <grid id="bb3e9" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="etched" title="Session Lifetime"/>
@@ -58,7 +56,8 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Creation Time:"/>
+                      <labelFor value="fd840"/>
+                      <text resource-bundle="com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog" key="label.creation-time"/>
                     </properties>
                   </component>
                   <component id="fd840" class="javax.swing.JTextField" binding="creationTimeTextField">
@@ -76,7 +75,8 @@
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Expiration Time:"/>
+                      <labelFor value="c2c6a"/>
+                      <text resource-bundle="com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog" key="label.expiry-time"/>
                     </properties>
                   </component>
                   <component id="c2c6a" class="javax.swing.JTextField" binding="expirationTimeTextField">
@@ -96,7 +96,8 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Server Entropy:"/>
+                  <labelFor value="c5811"/>
+                  <text resource-bundle="com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog" key="label.server-entropy"/>
                 </properties>
               </component>
               <component id="c5811" class="javax.swing.JTextField" binding="serverEntropyTextField">
@@ -111,21 +112,39 @@
               </component>
               <component id="6f9b6" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Shared Secret:"/>
+                  <labelFor value="3fa8c"/>
+                  <text resource-bundle="com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog" key="label.shared-secret"/>
                 </properties>
               </component>
               <component id="3fa8c" class="javax.swing.JTextField" binding="fullKeyTextField">
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
                 <properties>
                   <text value=""/>
                 </properties>
+              </component>
+              <component id="906e3" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <labelFor value="df178"/>
+                  <text resource-bundle="com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog" key="label.key-size"/>
+                </properties>
+              </component>
+              <component id="df178" class="javax.swing.JTextField" binding="keySizeTextField">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
               </component>
             </children>
           </grid>
@@ -142,7 +161,8 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Maximum Expiry Period:"/>
+                  <labelFor value="8aef6"/>
+                  <text resource-bundle="com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog" key="label.maximum-expiry"/>
                 </properties>
               </component>
               <component id="8aef6" class="javax.swing.JFormattedTextField" binding="maxLifetimeTextField">
@@ -186,7 +206,8 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Service URL:"/>
+                  <labelFor value="df266"/>
+                  <text resource-bundle="com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog" key="label.service-url"/>
                 </properties>
               </component>
               <component id="df266" class="javax.swing.JTextField" binding="serviceUrlTextField">
@@ -212,7 +233,8 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Security Context Token (Variable Name):"/>
+                  <labelFor value="9879"/>
+                  <text resource-bundle="com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog" key="label.token-variable"/>
                 </properties>
               </component>
               <component id="9879" class="javax.swing.JTextField" binding="sctVarNameTextField">
@@ -234,37 +256,6 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <grid id="c119" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="c7bfe" class="javax.swing.JButton" binding="okButton">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="OK"/>
-            </properties>
-          </component>
-          <component id="d1c65" class="javax.swing.JButton" binding="cancelButton" default-binding="true">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Cancel"/>
-            </properties>
-          </component>
-          <hspacer id="8cdce">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </hspacer>
-        </children>
-      </grid>
     </children>
   </grid>
   <buttonGroups>
