--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/WssConfigurationAssertionProperties.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/WssConfigurationAssertionProperties.form
@@ -72,7 +72,7 @@
               </component>
             </children>
           </grid>
-          <grid id="82f79" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="82f79" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Signing"/>
@@ -130,9 +130,18 @@
               </component>
               <vspacer id="21e67">
                 <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
+              <component id="b0267" class="javax.swing.JCheckBox" binding="signWSAddressingHeadersCheckBox">
+                <constraints>
+                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <selected value="true"/>
+                  <text value="Sign WS-Addressing Headers"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="f9870" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
