--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/EstablishOutboundSecureConversationPropertiesDialog.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="f773d" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f773d" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -249,6 +249,16 @@
               </component>
             </children>
           </grid>
+          <component id="31493" class="javax.swing.JCheckBox" binding="allowUsingSessionCheckBox">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <selected value="false"/>
+              <text value="Allow new incoming request messages to use this session"/>
+              <toolTipText value="&lt;html&gt;Check to merge outbound sessions into the Gateway's inbound session cache.&lt;br&gt;This effectively gives control of the Gateway's session cache to the target STS,&lt;br&gt;so only check this checkbox if it is necessary to do so and the target STS is trusted.&lt;/html&gt;"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <vspacer id="6b769">
